--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <h2>Payment Form Example</h2>
           </div>
           <div class="card-body">
+            <div class="alert alert-danger card" role="alert">
+              <strong>Some fields are missing</strong>
+            </div>
             <div class="row">
               <div class="col-12">
                 <div class="alert alert-danger d-none" role="alert">
